--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://SamwellLim.github.io/negative-ev-simulator/",
   "name": "neg-ev-sim",
   "version": "0.1.0",
   "private": true,
@@ -20,8 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "homepage": "https://SamwellLim.github.io/negative-ev-simulator/"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
